--- a/app/views/organized/dashboard/index.html.haml
+++ b/app/views/organized/dashboard/index.html.haml
@@ -3,25 +3,77 @@
     %em= current_organization.name
     Dashboard
 
-- if current_organization.regional? && current_organization.is_paid?
-  = render partial: "regional_bike_counts", locals: @regional_bike_counts
+= line_chart Bike.unscoped.current.organization(@affiliated_organization_ids).where(created_at: @time_range).send(group_by_method(@time_range), "bikes.created_at").count, curve: false, thousands: ",", defer: true
 
-- if current_organization.parent?
-  %h3.mt-4
-    Child organizations
+%div{ style: "margin-top: 50px;" }
+  = render partial: "/shared/period_select"
+
+- if current_organization.regional?
+  %h3.mt-4.uncap
+    Registrations nearby over the past #{@period}
+  .full-screen-table.mt-4
+    %table.table.table-striped.table-bordered.table-sm
+      %tbody
+        - if current_organization.parent?
+          %tr
+            %td Registered by affiliated organizations
+            %td= number_with_delimiter(@bikes_in_child_organizations_count)
+        - if @nearby_organizations.any?
+          %tr
+            %td
+              Registered by
+              - if current_organization.parent?
+                non-affiliated organizations
+              - else
+                nearby organizations
+            %td= number_with_delimiter(@bikes_in_nearby_organizations_count)
+        %tr
+          %td Self-registered nearby, not associated with any nearby organizations
+          %td= number_with_delimiter(@bikes_in_region_unaffiliated_count)
+        %tr
+          %td
+            Total bikes in region
+          %td
+            - total_bikes = @bikes_in_child_organizations_count + @bikes_in_nearby_organizations_count + @bikes_in_region_unaffiliated_count
+            = number_with_delimiter(total_bikes)
+
+  - if current_organization.parent?
+    %h3.mt-4.uncap
+      Affiliated organization registrations over the past #{@period}
+    .full-screen-table.mt-4
+      %table.table.table-striped.table-bordered.table-sm
+        %thead
+          %th Organization
+          %th.small Signed up
+          %th Bikes
+        %tbody
+          - current_organization.child_organizations.reorder(:name).each do |organization|
+            %tr
+              %td
+                = organization.name
+              %td
+                %small.convertTime= l(organization.created_at, format: :convert_time)
+              %td
+                = number_with_delimiter(organization.bikes.where(created_at: @time_range).count)
+
+- if current_organization.regional? && @nearby_organizations.any?
+  %h3.mt-4.uncap
+    - if current_organization.parent?
+      Unaffiliated
+    nearby Organization registrations over the past #{@period}
   .full-screen-table.mt-4
     %table.table.table-striped.table-bordered.table-sm
       %thead
         %th Organization
-        %th Signed up
+        %th.small Signed up
         %th Bikes
       %tbody
-        - current_organization.child_organizations.each do |organization|
+        - @nearby_organizations.reorder(:name).each do |organization|
           %tr
-            %td
-              = organization.name
-            %td
-              %span.convertTime
-                = l(organization.created_at, format: :convert_time)
-            %td
-              = number_with_delimiter(organization.bikes.count)
+            %tr
+              %td
+                = organization.name
+              %td
+                %small.convertTime= l(organization.created_at, format: :convert_time)
+              %td
+                = number_with_delimiter(organization.bikes.where(created_at: @time_range).count)
