--- a/app/views/organized/dashboard/index.html.haml
+++ b/app/views/organized/dashboard/index.html.haml
@@ -40,10 +40,10 @@
           %td
             - total_bikes = @bikes_in_organizations.count(:all) + @bikes_not_in_organizations.count(:all)
             = number_with_delimiter(total_bikes)
-    %small.less-strong{ style: "display: block; padding: 0.25rem 0.5rem; margin: -1rem 0 40px 0;" }
+    %small.less-strong.d-md-block{ style: "display: none; padding: 0.25rem 0.5rem; margin: -1rem 0 0 0;" }
       %em
         Total registrations
-      may be less than the sum of all rows because bikes can be registered with multiple organizations
+      may be different than the sum of all rows because bikes can be registered with multiple organizations
 
   - if current_organization.parent?
     %h3.mt-4.uncap
