--- a/app/views/admin/graphs/index.html.haml
+++ b/app/views/admin/graphs/index.html.haml
@@ -19,21 +19,10 @@
 
   = line_chart bikes_admin_graphs_path
 
-- elsif @kind == "bikes"
-  :ruby
-    graphing_data = [
-      {
-        name: "Bikes",
-        data: Bike.unscoped.where(created_at: @time_range).send(group_by_method(@time_range), "bikes.created_at", time_zone: @timezone, range: @time_range, format: group_by_format(@time_range)).count,
-      },
-       {
-         name: "Stolen records",
-         data: StolenRecord.unscoped.where(created_at: @time_range).send(group_by_method(@time_range), :created_at, time_zone: @timezone, range: @time_range, format: group_by_format(@time_range)).count,
-       },
-    ]
-  = column_chart graphing_data, stacked: true, thousands: ",", defer: true
+- elsif @kind == "users"
+  = column_chart User.where(created_at: @time_range).send(group_by_method(@time_range), :created_at, time_zone: @timezone, range: @time_range, format: group_by_format(@time_range)).count, thousands: ",", defer: true
   %h3.mt-4.mb-4
-    Bikes #{humanized_time_range(@time_range)}
+    Users #{humanized_time_range(@time_range)}
   = render partial: "/shared/period_select"
 - else
   = form_tag admin_graphs_path, method: :get, class: "variable-admin-graphs-form" do
