add payments js and relevant parts

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -159,8 +159,45 @@
 
 :javascript
   window.givingTuesdayModalLoaded = true;
-- modal_body = capture_haml do
-  .modal-body
-    %p
-      Support our non-profit efforts to fight bike theft
-= render partial: "shared/modal", locals: { title: "Annual Giving Campaign", id: "givingTuesdayModal", modal_body: modal_body }
+#givingTuesdayModal.modal.fade
+  .modal-dialog{ role: "document" }
+    .modal-content.donate-block
+      .modal-body.select-amount
+        %h2.modal-title
+          Annual Giving Campaign
+          %button.close{ "aria-label" => "Close", "data-dismiss" => "modal", type: "button" }
+            %span{ "aria-hidden" => "true" }
+              &times;
+        %hr
+        %p
+          %em
+            Support our non-profit effort to fight bike theft!
+        %form#bikeindex-stripe-initial-form
+          %ul.row.amount-list
+            - numbers = [10, 25, 50, 100, 200, 300, 500]
+            - numbers.each do |amount|
+              %li.col-xs-4
+                %a.btn.btn-secondary{ data: { amount: amount } }
+                  = number_to_currency(amount, precision: 0)
+            %li.col-xs-8
+              .input-group
+                .input-group-addon
+                  $
+                %input#arbitrary-amount.form-control{ type: "number", min: "0", placeholder: t("payments.form.other_amount"), step: 0.01 }
+          .next-step
+            = submit_tag t("payments.form.next"), class: "btn btn-primary"
+
+        %p.nfp-info
+          - nonprofit_link = link_to t("payments.form.501c3_nonprofit"), news_url("bike-index--now-a-nonprofit")
+          = t("payments.form.bike_index_is_a_nonprofit_html", nonprofit_link: nonprofit_link)
+
+<script src="https://checkout.stripe.com/checkout.js"></script>
+
+- stripe_form_hash = { id: 'stripe_form', data: { key: ENV['STRIPE_PUBLISHABLE_KEY'], email: current_user&.email, type: "Donate", currency: default_currency, description: t("payments.form.donate_to_bike_index") } }
+
+= form_tag payments_path, stripe_form_hash do
+  = hidden_field_tag :stripe_token
+  = hidden_field_tag :stripe_amount
+  = hidden_field_tag :stripe_currency, default_currency
+  = hidden_field_tag :stripe_email
+  = hidden_field_tag :is_payment, false
