--- a/app/assets/stylesheets/revised/pages/payments/payments.scss
+++ b/app/assets/stylesheets/revised/pages/payments/payments.scss
@@ -85,85 +85,90 @@ $payments-page-breakpoint: "sm";
       }
     }
   }
+}
+.donate-block {
+  background: $gray-darker;
+  text-align: center;
+  padding-bottom: 2 * $vertical-height;
 
-  .donate-block {
-    background: $gray-darker;
-    text-align: center;
-    padding-bottom: 2 * $vertical-height;
+  // Force at least a little padding on the bottom
+  h3 {
+    font-size: 25px;
+    color: white;
+    margin: 0;
+    padding: (2 * $vertical-height) $half-gutter;
+  }
 
-    // Force at least a little padding on the bottom
-    h3 {
-      font-size: 25px;
-      color: white;
-      margin: 0;
-      padding: (2 * $vertical-height) $half-gutter;
-    }
-
-    .select-amount {
-      background: #efefef;
-      width: 100%;
-      padding: (2 * $vertical-height) $half-gutter;
-
-      @include media-breakpoint-down($payments-page-breakpoint) {
-        border-radius: 1px;
-      }
-    }
-
-    p {
-      margin: 0;
-    }
-
-    .amount-list {
-      @include list-unstyled;
-
-      li {
-        margin-top: 2 * $vertical-height;
-      }
-
-      a {
-        font-family: $header-font-family;
-        font-size: 18px;
-        display: block;
-        width: 100%;
-        border-radius: 0.25rem;
-      }
-
-      .active {
-        border-color: $blue;
-      }
-    }
-
-    .next-step {
-      margin-top: 2 * $vertical-height;
-
-      .btn {
-        border-radius: 0.25rem;
-        width: auto;
-        display: block;
-        margin: 0 auto;
-      }
-    }
-
-    .nfp-info {
-      margin: 18px 0 -12px;
-      color: $less-strong-font-color;
-
-      a {
-        color: $less-strong-font-color;
-        text-decoration: underline;
-      }
-    }
+  .select-amount {
+    background: #efefef;
+    width: 100%;
+    padding: (2 * $vertical-height) $half-gutter;
 
     @include media-breakpoint-down($payments-page-breakpoint) {
-      padding-left: 12px;
-      padding-right: 12px;
+      border-radius: 1px;
+    }
+  }
+
+  p {
+    margin: 0;
+  }
+
+  .amount-list {
+    @include list-unstyled;
+
+    li {
+      margin-top: 2 * $vertical-height;
     }
 
-    @include media-breakpoint-up("md") {
-      padding-bottom: 0;
-      max-width: 525px;
-      border-radius: 1px;
+    a {
+      font-family: $header-font-family;
+      font-size: 18px;
+      display: block;
+      width: 100%;
+      border-radius: 0.25rem;
+    }
+
+    .active {
+      border-color: $blue;
+    }
+  }
+
+  .next-step {
+    margin-top: 2 * $vertical-height;
+
+    .btn {
+      border-radius: 0.25rem;
+      width: auto;
+      display: block;
       margin: 0 auto;
     }
+  }
+
+  .nfp-info {
+    margin: 18px 0 -12px;
+    color: $less-strong-font-color;
+
+    a {
+      color: $less-strong-font-color;
+      text-decoration: underline;
+    }
+  }
+
+  @include media-breakpoint-down($payments-page-breakpoint) {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  @include media-breakpoint-up("md") {
+    padding-bottom: 0;
+    max-width: 525px;
+    border-radius: 1px;
+    margin: 0 auto;
+  }
+
+  // This is a modal popup donation form - it has slightly different styles
+  &.modal-content {
+    background: none;
+    padding: 0 !important;
   }
 }
