Externalize strings from donation modal

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -166,11 +166,11 @@
             &times;
         = image_tag "revised/logo_blue_black.svg", class: "modal-title-logo", alt: "Bike Index home"
         %h2.modal-title
-          Annual Giving Campaign
+          = t(".annual_giving_campaign")
         %hr
         %p.mt-2
           %strong.em
-            We rely on your donations to support our efforts!
+            = t(".we_rely_on_your_contributions")
         %form#bikeindex-stripe-initial-form
           %ul.row.amount-list
             - numbers = [10, 25, 50, 100, 200, 300, 500]
@@ -186,14 +186,14 @@
           .row
             .col-xs-6.text-left
               %a.close.btn.btn-secondary{ "aria-label" => "Close", "data-dismiss" => "modal", style: "display: inline-block; float: none;" }
-                Skip
+                = t(".skip")
             .col-xs-6.text-right
               = submit_tag t("payments.form.next"), class: "btn btn-primary"
 
         %p.nfp-info
-          Bike Index is a #{link_to "501(c)(3) nonprofit", news_url("bike-index--now-a-nonprofit")}
-          %br
-          Support our non-profit effort to fight bike theft!
+          - link = link_to t(".nonprofit_501c3"), news_url("bike-index--now-a-nonprofit")
+          = t(".is_a_nonprofit_html", blog_link: link)
+
 
 
 <script src="https://checkout.stripe.com/checkout.js"></script>
