--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -181,7 +181,7 @@
             %li.col-xs-8
               .input-group
                 .input-group-addon
-                  $
+                  = t("number.currency.format.unit")
                 %input#arbitrary-amount.form-control{ type: "number", min: "0", placeholder: t("payments.form.other_amount"), step: 1 }
           .row
             .col-xs-6.text-left
