--- a/app/views/payments/_form.html.haml
+++ b/app/views/payments/_form.html.haml
@@ -28,8 +28,8 @@
             %li.col-xs-8
               .input-group
                 .input-group-addon
-                  $
-                %input#arbitrary-amount.form-control{ type: 'number', min: '0', placeholder: t('.other_amount'), step: 0.01, value: @initial_amount, class: ('active' if @initial_amount) }
+                  = t("number.currency.format.unit")
+                %input#arbitrary-amount.form-control{ type: 'number', min: '0', placeholder: t('.other_amount'), step: 1, value: @initial_amount, class: ('active' if @initial_amount) }
         .next-step
           = submit_tag t(".next"), class: 'btn btn-primary'
 
