--- a/app/assets/stylesheets/revised/pages/payments/payments.scss
+++ b/app/assets/stylesheets/revised/pages/payments/payments.scss
@@ -178,5 +178,8 @@ $payments-page-breakpoint: "sm";
       width: 4rem;
       height: auto;
     }
+    .btn {
+      border-radius: 0.25rem;
+    }
   }
 }
