--- a/app/assets/stylesheets/revised/sections/modals.scss
+++ b/app/assets/stylesheets/revised/sections/modals.scss
@@ -30,7 +30,8 @@
     font-size: inherit;
     font-family: sans-serif;
     font-weight: 100;
-    color: $gray;
+    color: #222;
+    font-size: 20px;
   }
 }
 
