--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -1,7 +1,7 @@
 /*
  * Revised manifest file
  * things from rails-assets
- *= require selectize/selectize.bootstrap3.scss
+ *= require selectize/selectize.bootstrap3
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  */
 
