Revert "Upgrade Sprockets to v4 (#1428)"
This reverts commit 19411bafa8734dfdb876d394d6457b0d37b34de3.

--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -2,7 +2,7 @@
  * Revised manifest file
  * things from rails-assets
  *= require select2
- *= require selectize/selectize.bootstrap3
+ *= require selectize/selectize.bootstrap3.scss
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  */
 
