correct link for homepage partner

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -69,7 +69,7 @@
         .root-landing-who-square
           = image_tag "landing_pages/partners/UMD.png", alt: "University of Maryland"
         .root-landing-who-rectangle
-          = image_tag "landing_pages/partners/Bike-East-Bay.png", alt: "Bike East Bay"
+          = link_to image_tag("landing_pages/partners/Bike-East-Bay.png", alt: "Bike East Bay"), "https://bikeeastbay.org/Register"
         .root-landing-who-square
           = image_tag "landing_pages/partners/University-of-Washington.png", alt: "University of Washington"
         .root-landing-who-square
@@ -98,7 +98,7 @@
         .root-landing-who-square
           = image_tag "landing_pages/partners/Santa-Monica-PD.png", alt: "Santa Monica Police Department"
         .root-landing-who-square
-          = link_to image_tag("landing_pages/partners/Bike-Portland.png", alt: "Bike Portland"), "https://bikeeastbay.org/Register"
+          = image_tag("landing_pages/partners/Bike-Portland.png", alt: "Bike Portland")
         .root-landing-who-square
           = image_tag "landing_pages/partners/Drenthe.png", alt: "Provincie Drenthe"
         .root-landing-who-square
